--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "@okta/okta-auth-js": "^1.8.0",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
   },
